Bug 675121.  Unregister animation frame callbacks from the refresh driver while we have event handling suppressed.  r=smaug,roc